--- a/rarreg.html
+++ b/rarreg.html
@@ -450,3 +450,8 @@ function keygen() {
 用户名: <input type="text" id="regname" value="DaBaival"><br>
 许可证: <input type="text" id="regtype" value="Single PC usage licence"><br>
 <button onclick="keygen();">生成</button>
+<p>许可证类型: </p>
+<p>Single PC usage license</p>
+<p>Local Site License</p>
+<p>Unlimited Company License</p>
+<p>1000 PC usage license</p>
