--- a/index.html
+++ b/index.html
@@ -218,10 +218,22 @@
             <p>解析二维码</p>
         </div>
 
+        <div class="tool-box" onclick="expandTool('cs6keygen.html')" style="animation-delay: 0.3s;">
+            <div class="tool-box-icon">🔐</div>
+            <h2>AdoKG Activator CS6</h2>
+            <p>CS6密钥生成器</p>
+        </div>
+
         <div class="tool-box" onclick="expandTool('rargen.html')" style="animation-delay: 0.3s;">
             <div class="tool-box-icon">🔐</div>
             <h2>WinRAR密钥生成</h2>
             <p>仅支持ASCII编码字符</p>
+        </div>
+
+        <div class="tool-box" onclick="expandTool('cttc.html')" style="animation-delay: 0.3s;">
+            <div class="tool-box-icon">🕗️</div>
+            <h2>课程倒计时</h2>
+            <p>福州软件职业技术学院</p>
         </div>
         <!-- 可以这里添加更多工具方块 -->
     </div>
